--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dify-plugin>=0.2.0,<0.3.0",
+    "pdf2docx>=0.5.8",
     "python-docx>=1.2.0",
 ]
