--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,17 +1,17 @@
 version: 0.0.1
 type: plugin
 author: czfsss
-name: word-chunk
+name: word-tools
 label:
-  en_US: word-chunk
-  ja_JP: word-chunk
-  zh_Hans: word-chunk
-  pt_BR: word-chunk
+  en_US: word-tools
+  ja_JP: word-tools
+  zh_Hans: word-tools
+  pt_BR: word-tools
 description:
-  en_US: 用于对word分段
-  ja_JP: 用于对word分段
-  zh_Hans: 用于对word分段
-  pt_BR: 用于对word分段
+  en_US: Word document operation tool that can segment Word documents, convert PDF to Word, and add annotations to Word documents
+  ja_JP: Word文書の分割、PDFからWordへの変換、およびWord文書への注釈の追加を実現するWord文書操作ツール
+  zh_Hans: word文档操作工具，可以实现word文档的分段、pdf转word操作以及word文档批注功能
+  pt_BR: Ferramenta de operação de documentos Word que pode segmentar documentos Word, converter PDF para Word e adicionar anotações aos documentos Word
 icon: icon_new.svg
 icon_dark: icon-dark.svg
 resource:
