--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "dify-plugin>=0.2.0,<0.3.0",
+    "beautifulsoup4>=4.6.0",
+    "dify-plugin>=0.3.0,<0.5.0",
     "htmldocx>=0.0.6",
     "markdown>=3.0.0",
     "pdf2docx>=0.5.8",
